--- a/.github/workflows/build_on_push_into_master.yaml
+++ b/.github/workflows/build_on_push_into_master.yaml
@@ -34,5 +34,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: latest
+          tags: latest
+          labels: github-build
