--- a/.github/workflows/build_on_push_into_master.yaml
+++ b/.github/workflows/build_on_push_into_master.yaml
@@ -10,6 +10,7 @@ on:
 jobs:
   run_build:
     runs-on: ubuntu-latest
+    needs: run_test
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 17
